Fixed minor spacing issues on desktop site

--- a/src/styles/NewWorkout.css
+++ b/src/styles/NewWorkout.css
@@ -1,7 +1,6 @@
 .new-workout-container {
   width: 90%;
   margin: auto;
-  margin-bottom: 64px;
   display: flex;
   flex-direction: column;
   align-items: center;
