--- a/src/styles/Timeline.css
+++ b/src/styles/Timeline.css
@@ -1,7 +1,6 @@
 .timeline-container {
   width: 90%;
   margin: auto;
-  margin-bottom: 64px;
   display: flex;
   flex-direction: column;
   align-items: center;
